src/kotlin/io/github/will7200/plugins/casbin/language/parser/Casbin.bnf
{
  parserClass="io.github.will7200.plugins.casbin.language.parser.CasbinParser"
  parserUtilClass = "io.github.will7200.plugins.casbin.language.parser.CasbinParserUtil"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Casbin"
  psiImplClassSuffix="Impl"
  psiPackage="io.github.will7200.plugins.casbin.language.psi"
  psiImplPackage="io.github.will7200.plugins.casbin.language.psi.impl"

  elementTypeHolderClass="io.github.will7200.plugins.casbin.language.psi.CasbinElementTypes"
  elementTypeClass="io.github.will7200.plugins.casbin.language.psi.CasbinElementType"
  tokenTypeClass="io.github.will7200.plugins.casbin.language.psi.CasbinTokenType"
  tokens = [
      L_BRACKET = "["
      R_BRACKET = "]"
      ASSIGN = "="
      COMMA = ","
      OP_AND = "&&"
      OP_OR = "||"
      OP_EQUALS = "=="
      ALLOW = "allow"
      DENY = "deny"
      LINE_COMMENT='regexp:[#;].*'
  ]
  psiImplUtilClass = "io.github.will7200.plugins.casbin.language.psi.CasbinPsiImplUtil"
}
casbinModel ::= section
section ::= header property*
header ::= L_BRACKET SECTION_NAME R_BRACKET

property ::= KEY ASSIGN VALUE
